# pass-check

./: .gitignore  Cargo.toml  Makefile  README.md
examples/: const_folding.rs  sum.rs
examples/loops/: loops.rs
examples/sum/: sum.rs
src/: context.rs  function.rs  lib.rs  main.rs  overall.rs
